docs/envoy/v1.18.2/_sources/api-v3/config/retry/previous_hosts/v2/previous_hosts.proto.rst.txt
.. _envoy_v3_api_file_envoy/config/retry/previous_hosts/v2/previous_hosts.proto:

Previous Hosts Predicate
========================


.. _extension_envoy.retry_host_predicates.previous_hosts:

This extension may be referenced by the qualified name *envoy.retry_host_predicates.previous_hosts*

.. note::
  

  This extension is intended to be robust against untrusted downstream traffic. It assumes that the upstream is trusted.

.. tip::
  This extension extends and can be used with the following extension category:


  - :ref:`envoy.retry_host_predicates <extension_category_envoy.retry_host_predicates>`


.. _envoy_v3_api_msg_config.retry.previous_hosts.v2.PreviousHostsPredicate:

config.retry.previous_hosts.v2.PreviousHostsPredicate
-----------------------------------------------------

`[config.retry.previous_hosts.v2.PreviousHostsPredicate proto] <https://github.com/envoyproxy/envoy/blob/v1.18.2/api/envoy/config/retry/previous_hosts/v2/previous_hosts.proto#L17>`_




